<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        >
    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster_image"
        />
        <TextView
            android:id="@+id/tv_more_details"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/iv_rating"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@android:drawable/star_big_on"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/star"
                />

            <TextView
                android:id="@+id/tv_rating"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center_vertical"
                tools:text="@string/rating_placeholder"
            />
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
